--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,12 @@
             "CodingMatters\\Persistence\\": "module/Persistence/src/"
         }
     },
+    "extra": {
+        "zf": {
+            "module": "CodingMatters\\Persistence",
+            "config-provider": "CodingMatters\\Persistence\\ConfigProvider"
+        }
+    },
     "autoload-dev": {
         "psr-4": {
             "CodingMatters\\PersistenceTest\\": "module/Persistence/test/"
