--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "php": "^7.0",
         "roave/security-advisories": "dev-master",
-        "zendframework/zend-hydrator": "^2.2"
+        "zendframework/zend-hydrator": "^2.2",
+        "zendframework/zend-db": "^2.8"
     },
     "require-dev": {
         "zendframework/zend-test": "^3.0.1",
